--- a/composer.json
+++ b/composer.json
@@ -38,14 +38,15 @@
         "trwl/socialite-mastodon": "^1.2"
     },
     "require-dev": {
+        "ext-pdo_sqlite": "*",
         "barryvdh/laravel-debugbar": "^3.5",
         "beyondcode/laravel-dump-server": "dev-master",
-        "ext-pdo_sqlite": "*",
         "fakerphp/faker": "^1.9",
         "filp/whoops": "^2.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.0",
+        "rector/rector": "^0.12.19",
         "roave/security-advisories": "dev-latest",
         "spatie/laravel-ignition": "^1.0"
     },
