--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "vue-image-crop-upload": "^3.0.3",
         "vue-localstorage": "^0.6.2",
         "vue-meta": "^2.4.0",
-        "vue-router": "^3.5.1"
+        "vue-router": "^3.5.1",
+        "vuex": "^3.6.2"
     }
 }
